--- a/src/main/resources/static/bussiness/listbusi.html
+++ b/src/main/resources/static/bussiness/listbusi.html
@@ -1,132 +1,18 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>信贷系统</title>
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="user lists">
-    <meta name="author" content="lynn">
-
-    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
-
-    <script src="../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="../lib/angular-1.5.5/angular.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="../css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../css/premium.css">
-
-    <link href="../css/jquery.circliful.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../js/jquery.circliful.min.js"></script>
-</head>
-<body class=" theme-blue">
-
-<!-- Demo page code -->
-
-<script type="text/javascript">
-    $(function () {
-        var match = document.cookie.match(new RegExp('color=([^;]+)'));
-        if (match) var color = match[1];
-        if (color) {
-            $('body').removeClass(function (index, css) {
-                return (css.match(/\btheme-\S+/g) || []).join(' ')
-            })
-            $('body').addClass('theme-' + color);
-        }
-
-        $('[data-popover="true"]').popover({html: true});
-
-    });
-</script>
-<style type="text/css">
-    #line-chart {
-        height: 300px;
-        width: 800px;
-        margin: 0px auto;
-        margin-top: 1em;
-    }
-
-    .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
-        color: #fff;
-    }
-</style>
-
-<script type="text/javascript">
-    $(function () {
-        var uls = $('.sidebar-nav > ul > *').clone();
-        uls.addClass('visible-xs');
-        $('#main-menu').append(uls.clone());
-
-        $('#myStathalf').circliful();
-        $('#myStat').circliful();
-        $('#myStathalf2').circliful();
-        $('#myStat2').circliful();
-    });
-</script>
-
-<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
-
-<!--[if lt IE 7 ]>
-<body class="ie ie6"> <![endif]-->
-<!--[if IE 7 ]>
-<body class="ie ie7 "> <![endif]-->
-<!--[if IE 8 ]>
-<body class="ie ie8 "> <![endif]-->
-<!--[if IE 9 ]>
-<body class="ie ie9 "> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-
-<!--<![endif]-->
-
-<div class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="" href="index.html"><span class="navbar-brand"> 信贷系统</span></a>
-    </div>
-
-    <div class="navbar-collapse collapse" style="height: 1px;">
-        <ul id="main-menu" class="nav navbar-nav navbar-right">
-            <li class="dropdown hidden-xs">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-user padding-right-small"
-                          style="position:relative;top: 3px;"></span> 总经理
-                    <i class="fa fa-caret-down"></i>
-                </a>
-
-                <ul class="dropdown-menu">
-                    <li><a href="sign-in.html">退出</a></li>
-                </ul>
-            </li>
-        </ul>
-
-    </div>
-</div>
-</div>
-
-
 <div class="sidebar-nav">
     <ul>
         <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
             业务管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
-                <li class="active"><a href="listbusi.html"><span class="fa fa-caret-right"></span> 业务查询</a></li>
-                <li><a href="myBussiness.html"><span class="fa fa-caret-right"></span> 我的业务</a></li>
+                <li class="active"><a href="#" ui-sref="main.listBusi"><span class="fa fa-caret-right"></span> 业务查询</a></li>
+                <li><a href="#" ui-sref="main.myBusi"><span class="fa fa-caret-right"></span> 我的业务</a></li>
             </ul>
         </li>
 
 
-        <li data-popover="true" rel="popover" data-placement="right"><a href="#" data-target=".premium-menu" class="nav-header collapsed" data-toggle="collapse">
+        <li data-popover="true" rel="popover" data-placement="right"><a href="#" data-target=".premium-menu"
+                                                                        class="nav-header collapsed"
+                                                                        data-toggle="collapse">
             客户管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="premium-menu nav nav-list collapse">
@@ -146,9 +32,6 @@
     <div class="main-content">
 
 
-
-
-
         <div class="panel panel-default">
             <a href="#page-stats" class="panel-heading" data-toggle="collapse">业务状态统计</a>
             <div id="" class="">
@@ -156,22 +39,29 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="knob-container">
-                            <div id="myStathalf" data-dimension="250" data-text="3" data-info="审核" data-width="30" data-fontsize="38" data-percent="12" data-fgcolor="#7ea568" data-bgcolor="#eee" data-type="half" data-fill="#ddd"></div>
+                            <div id="myStathalf" data-dimension="250" data-text="3" data-info="审核" data-width="30"
+                                 data-fontsize="38" data-percent="12" data-fgcolor="#7ea568" data-bgcolor="#eee"
+                                 data-type="half" data-fill="#ddd"></div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="knob-container">
-                            <div id="myStat" data-dimension="250" data-text="2" data-info="签约" data-width="30" data-fontsize="38" data-percent="8" data-fgcolor="#61a9dc" data-bgcolor="#eee" data-fill="#ddd"></div>
+                            <div id="myStat" data-dimension="250" data-text="2" data-info="签约" data-width="30"
+                                 data-fontsize="38" data-percent="8" data-fgcolor="#61a9dc" data-bgcolor="#eee"
+                                 data-fill="#ddd"></div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="knob-container">
-                            <div id="myStathalf2" data-dimension="250" data-text="1" data-info="放款" data-width="30" data-fontsize="38" data-percent="2" data-fgcolor="#7ea568" data-bgcolor="#eee" data-type="half" data-icon="fa-task"></div>
+                            <div id="myStathalf2" data-dimension="250" data-text="1" data-info="放款" data-width="30"
+                                 data-fontsize="38" data-percent="2" data-fgcolor="#7ea568" data-bgcolor="#eee"
+                                 data-type="half" data-icon="fa-task"></div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="knob-container">
-                            <div id="myStat2" data-dimension="250" data-text="2" data-info="拒绝/取消" data-width="30" data-fontsize="38" data-percent="5" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
+                            <div id="myStat2" data-dimension="250" data-text="2" data-info="拒绝/取消" data-width="30"
+                                 data-fontsize="38" data-percent="5" data-fgcolor="#61a9dc" data-bgcolor="#eee"></div>
                         </div>
                     </div>
                 </div>
@@ -191,8 +81,8 @@
                             <th>操作</th>
                         </tr>
                         </thead>
-                        <tbody>
-                        <tr>
+                        <tbody ng-repeat="bus in busiList">
+                        <!--<tr>
                             <td>BUS17042020570211</td>
                             <td>小点点</td>
                             <td>待审核</td>
@@ -245,6 +135,15 @@
                                 <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>
                                 <a href="" role="button"><i>查看</i></a>
                             </td>
+                        </tr>-->
+                        <tr>
+                            <td>{{bus.bus_id}}</td>
+                            <td>{{bus.custName}}</td>
+                            <td>{{bus.busiStatus}}</td>
+                            <td>
+                                <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>
+                                <a href="" role="button"><i>查看</i></a>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
@@ -259,22 +158,3 @@
         </footer>
     </div>
 </div>
-
-
-<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript">
-    $("[rel=tooltip]").tooltip();
-    $(function () {
-        $('.demo-cancel-click').click(function () {
-            return false;
-        });
-    });
-
-    function loadPage() {
-
-    }
-</script>
-
-
-</body>
-</html>
