--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -12,14 +12,14 @@
     <div class="navbar-collapse collapse" style="height: 1px;">
         <ul id="main-menu" class="nav navbar-nav navbar-right">
             <li class="dropdown hidden-xs">
-                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
+                <a href="javascript:void(0)" class="dropdown-toggle" ng-click="openDropMenu=!openDropMenu">
                     <span class="glyphicon glyphicon-user padding-right-small"
                           style="position:relative;top: 3px;"></span> {{loginName}}
                     <i class="fa fa-caret-down"></i>
                 </a>
 
-                <ul class="dropdown-menu">
-                    <li><a href="sign-in.html">退出</a></li>
+                <ul class="dropMenu" ng-show="openDropMenu">
+                    <li><a href="#" ui-sref="signIn">退出</a></li>
                 </ul>
             </li>
         </ul>
@@ -29,10 +29,10 @@
 </div>
 
 
-<div class="sidebar-nav">
+<!--<div class="sidebar-nav">
     <ul ng-repeat="menu in menuList">
 
-        <!--<li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
+        &lt;!&ndash;<li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
             用户管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
@@ -54,106 +54,20 @@
             <ul class="premium-menu nav nav-list collapse">
                 <li class="visible-xs visible-sm"><a href="javascript:;"><span class="fa fa-caret-right"></span>菜单配置</a></li>
             </ul>
-        </li>-->
+        </li>&ndash;&gt;
         <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
             {{menu.title}}<i class="fa fa-collapse"></i></a>
         </li>
         <li ng-repeat="sub in menu.children">
             <ul class="dashboard-menu nav nav-list collapse in">
-                <li class=""><a ui-sref="main.{{sub.link}}" ui-sref-opts="{reload:true}" href="#"><span class="fa fa-caret-right"></span> {sub.title}</a></li>
+                <li class=""><a ui-sref="main.{{sub.link}}" ui-sref-opts="{reload:true}" href="#"><span class="fa fa-caret-right"></span> {{sub.title}}</a></li>
             </ul>
         </li>
     </ul>
 </div>
 
-<!--
-<div class="content">
-    <div class="header">
-
-        <h1 class="page-title">用户查询</h1>
-
-    </div>
-    <div class="main-content">
-
-        <div class="btn-toolbar list-toolbar">
-            <div style="float: left">
-                <button class="btn btn-primary" onclick="loadPage()"><i class="fa fa-plus"></i> 新增用户</button>
-            </div>
-
-            <div style="float: right;">
-                <form class="form-inline" id="myForm">
-                    <input type="text" class="form-control" placeholder="请输入用户姓名" name="username">
-                    <input type="text" class="form-control" placeholder="请输入用户工号" name="employeeId">
-                    <button class="btn btn-primary" onclick="submitMsg()">查询</button>
-                </form>
-
-            </div>
-        </div>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>用户id</th>
-                <th>用户名</th>
-                <th>登录账号</th>
-                <th>手机号</th>
-                <th>工号</th>
-                <th>角色</th>
-                <th style="width: 7.5em;"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>1</td>
-                <td>林裕美</td>
-                <td>linyumei</td>
-                <td>18775242500</td>
-                <td>0227</td>
-                <td>总经理</td>
-                <td>
-                    <a href="l"><i class="fa fa-pencil"></i><i>编辑</i></a>&nbsp;&nbsp;
-                    <a href="" role="button"><i>停用</i></a>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>大绍殷</td>
-                <td>dashaone</td>
-                <td>13580114488</td>
-                <td>0327</td>
-                <td>客服1</td>
-                <td>
-                    <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>&nbsp;&nbsp;
-                    <a href="" role="button"><i>停用</i></a>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>小橘毛</td>
-                <td>xiaojumao</td>
-                <td>15278366609</td>
-                <td>0328</td>
-                <td>客服2</td>
-                <td>
-                    <a href="" role="button"><i>启用</i></a>&nbsp;&nbsp;
-                    <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">&raquo;</a></li>
-        </ul>
-
-        <footer>
-            <hr>
-            <p>© 2017 <a href="javascript:void(0)" target="_blank">gplynn</a></p>
-        </footer>
-    </div>
-</div>-->
-
 <div class="content" ui-view="content">
 
-</div>
+</div>-->
+
+<div ui-view="content"></div>
