--- a/src/main/resources/static/bussiness/myBussiness.html
+++ b/src/main/resources/static/bussiness/myBussiness.html
@@ -6,7 +6,7 @@
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
                 <li><a href="#" ui-sref="main.listBusi"><span class="fa fa-caret-right"></span> 业务查询</a></li>
-                <li class="active" ui-sref="main.myBusi"><a href="#"><span class="fa fa-caret-right"></span> 我的业务</a></li>
+                <li class="active"><a href="#" ui-sref="main.myBusi"><span class="fa fa-caret-right"></span> 我的业务</a></li>
             </ul>
         </li>
 
