--- a/src/main/resources/static/user/users.html
+++ b/src/main/resources/static/user/users.html
@@ -10,13 +10,13 @@
             </ul>
         </li>
 
-        <li data-popover="true" rel="popover" data-placement="right"><a href="javascript:;" data-target=".premium-menu"
-                                                                        class="nav-header collapsed"
+        <li data-popover="true" rel="popover" data-placement="right" ng-click="showSubMenuWrap($event)"><a href="javascript:;" data-target=".premium-menu"
+                                                                        class="nav-header "
                                                                         data-toggle="collapse">
-            权限管理<i class="fa fa-collapse"></i></a></li>
+            角色管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="premium-menu nav nav-list collapse">
-                <li class="visible-xs visible-sm"><a href="javascript:;"><span class="fa fa-caret-right"></span>权限配置</a>
+                <li class=""><a href="javascript:;"><span class="fa fa-caret-right"></span>角色管理</a>
                 </li>
             </ul>
         </li>
