--- a/src/main/resources/static/wechat/register.html
+++ b/src/main/resources/static/wechat/register.html
@@ -92,7 +92,7 @@
 <script type="text/javascript" src="../js/wxMain.js"></script>
 <script>
     $("#start").cityPicker({
-        title: "选择出发地",
+        title: "选择地址",
         onChange: function (picker, values, displayValues) {
             console.log(values, displayValues);
         }
