--- a/src/main/resources/static/bussiness/listbusi.html
+++ b/src/main/resources/static/bussiness/listbusi.html
@@ -4,7 +4,8 @@
             业务管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
-                <li class="active"><a href="#" ui-sref="main.listBusi"><span class="fa fa-caret-right"></span> 业务查询</a></li>
+                <li class="active"><a href="#" ui-sref="main.listBusi"><span class="fa fa-caret-right"></span> 业务查询</a>
+                </li>
                 <li><a href="#" ui-sref="main.myBusi"><span class="fa fa-caret-right"></span> 我的业务</a></li>
             </ul>
         </li>
@@ -138,11 +139,11 @@
                         </tr>-->
                         <tr>
                             <td>{{bus.bus_id}}</td>
-                            <td>{{bus.custName}}</td>
-                            <td>{{bus.busiStatus}}</td>
+                            <td>{{bus.custname}}</td>
+                            <td>{{bus.busistatus}}</td>
                             <td>
-                                <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>
-                                <a href="" role="button"><i>查看</i></a>
+                                <a href="#" ng-show="loginUserRole == '9'" ui-sref=""><i class="fa fa-pencil"></i><i>编辑</i></a>
+                                <a href="#" role="button"><i>查看</i></a>
                             </td>
                         </tr>
                         </tbody>
