--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <title>index</title>
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
     <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="css/theme.css">
     <link rel="stylesheet" type="text/css" href="css/premium.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
 
     <script type="text/javascript" src="lib/angular-1.5.5/angular.min.js"></script>
-    <script type="text/javascript" src="lib/angular-1.5.5/angular-route.min.js"></script>
+    <!--<script type="text/javascript" src="lib/angular-1.5.5/angular-route.min.js"></script>-->
+    <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js " type="text/javascript"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/angularCtrl.js"></script>
     <script type="text/javascript" src="js/angularServ.js"></script>
 
-    <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js " type="text/javascript"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <link href="css/jquery.circliful.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/jquery.circliful.min.js"></script>
+
 </head>
 <body class=" theme-blue" ng-app="myApp">
 
